# mcfat_standalone

./: .gitignore  CMakeLists.txt  README.md
include/: mcfat.h
lib/: CMakeLists.txt
lib/include/: mcfat_config.h
lib/src/: main.c  mcfat-internal.h  mcsio2.c  ps2mc_fio.c
src/: libmc-common.h  main.c  mcfat-internal.h  mcsio2.c  types.h
testapp/: CMakeLists.txt  main.c
